Remove try-with-resources